# advent_of_code21

./: Cargo.toml
src/: debug.rs  main.rs  p1.rs  p2.rs  p3.rs  p4.rs  p5.rs  p6.rs  p7.rs  p8.rs  p9.rs
src/p1/: p1a.rs  p1b.rs
src/p2/: p2b.rs
src/p2/p2b/: play_types.rs
src/p3/: p3a.rs  p3b.rs
src/p4/: p4a.rs  p4b.rs  utils.rs
src/p5/: p5b.rs  utils.rs
src/p6/: p6a.rs
src/p7/: p7b.rs  utils.rs
src/p8/: p8a.rs  p8b.rs  utils.rs
src/p9/: p9a.rs  p9b.rs  utils.rs
